# intro-to-python

./: CONTENTS.md  LICENSE.txt  README.md  noxfile.py  pyproject.toml
00_intro/: 00_content.ipynb  01_exercises_markdown.ipynb  02_review.ipynb
01_elements/: 00_content.ipynb  01_exercises_print.ipynb  02_exercises_for-loops.ipynb  03_content.ipynb  04_exercises_calculator.ipynb  05_summary.ipynb  06_review.ipynb  07_resources.ipynb
02_functions/: 00_content.ipynb  01_exercises.ipynb  01_exercises_sphere-volume.ipynb  02_content.ipynb  03_summary.ipynb  04_review.ipynb
03_conditionals/: 00_content.ipynb  01_exercises_discounts.ipynb  02_exercises_fizz-buzz.ipynb  03_summary.ipynb  04_review.ipynb
04_iteration/: 00_content.ipynb  01_exercises_hanoi-towers.ipynb  02_content.ipynb  03_content.ipynb  04_exercises_dice.ipynb  05_summary.ipynb  06_review.ipynb
05_numbers/: 00_content.ipynb  01_content.ipynb  02_content.ipynb  03_appendix.ipynb  04_summary.ipynb  05_review.ipynb  06_resources.ipynb
06_text/: 00_content.ipynb  01_exercises_palindromes.ipynb  02_content.ipynb  03_summary.ipynb  04_review.ipynb  05_resources.ipynb
07_sequences/: 00_content.ipynb  01_content.ipynb  02_exercises_lists.ipynb  03_content.ipynb  04_exercises_un-packing.ipynb  05_appendix.ipynb  06_summary.ipynb  07_review.ipynb
08_mfr/: 00_content.ipynb  01_content.ipynb  02_exercises_outliers.ipynb  03_exercises_un-packing.ipynb  04_content.ipynb  05_summary.ipynb  06_review.ipynb
09_mappings/: 00_content.ipynb  01_exercises_nested-data.ipynb  02_content.ipynb  04_content.ipynb  (+5 more)
(+8 files in other folders)
